<resources>
    <string name="app_name">FAC-IL</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_up_login">¿No esta registrado? <b><u>Registrate</u></b></string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_current_month">Mes Actual</string>
    <string name="title_previus_month">Mes Actual</string>

    <string name="progress_dialog">Cargando...</string>
    <string name="please_wait">Espere un Momento</string>

    <string name="error_try_again_support">Error. Inténtalo de nuevo o contacta con Soporte Tecnico</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="title_activity_items">Productos/Servicios</string>
    <string name="title_activity_home">Principal</string>
    <string name="title_activity_clients">Clientes</string>
    <string name="title_activity_estimates">Proformas</string>
    <string name="title_activity_invoices">Facturas</string>

    <string name="title_activity_new_item">Nuevo Producto/Servicio</string>
    <string name="title_activity_new_client">Nuevo Cliente</string>
    <string name="title_activity_new_estimate">Nueva Proforma</string>
    <string name="title_activity_new_invoice">Nueva Factura</string>
    <string name="title_activity_item_picker">Seleccione Producto/Servicio</string>

    <string name="name">Nombre</string>
    <string name="rate">Precio</string>
    <string name="quantity">Cantidad</string>
    <string name="description">Descripción</string>

    <string name="email_invoice">Facturar por Email</string>
    <string name="download_pdf">Descargar PDF</string>

    <string name="save">GUARDAR</string>
    <string name="delete">Eliminar</string>
    <string name="ok">ACEPTAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="delete_item">¿Eliminar Producto/Servicio?</string>
    <string name="save_successful">Se guardo correctamente</string>

    <string name="email">Email</string>
    <string name="address1">Dirección 1</string>
    <string name="address2">Dirección 2</string>
    <string name="city">Ciudad</string>
    <string name="state">Departamento</string>
    <string name="postcode_zip">Codigo Postal / Zip</string>
    <string name="country">Pais</string>

    <string name="invoice_number">Factura #</string>
    <string name="estimate_number">Proforma #</string>
    <string name="tax_rate">Tasa de Impuesto (%)</string>
    <string name="client_notes">Notas de Cliente</string>
    <string name="notes">Notas</string>
    <string name="client">Cliente</string>
    <string name="items">Productos/Servicios</string>
    <string name="invoice_date">Fecha de Factura</string>
    <string name="invoice_due_date">Fecha de Vencimiento</string>
    <string name="estimate_date">Fecha de Proforma</string>
    <string name="estimate_due_date">Fecha de Expiración</string>
    <string name="subtotal">Subtotal</string>
    <string name="balance_due">Saldo Adeudado</string>
    <string name="tax">Impuesto</string>
    <string name="invoice_number_required">Numero de Factura Requerido</string>
    <string name="estimate_number_required">Numero de Proforma Requerido</string>
    <string name="client_required">Cliente Requerido</string>

    <string name="or">O</string>
    <string name="paid">Pagado</string>
    <string name="payment_received">¿Pago recibido?</string>
    <string name="items_required">Producto/Servicio Requerido. Porfavor adicione Producto/Servicio.</string>
    <string name="convert_to_invoice">Convertir a Factura</string>
    <string name="invoiced">Facturado</string>
    <string name="email_estimate">Email Estimate</string>
    <string name="currency_format_example">Moneda(ejemplo):</string>
    <string name="item">Producto/Servicio</string>
    <string name="amount">Cantidad</string>
    <string name="invoice_capitalized">PRODUCTO/SERVICIO</string>
    <string name="invoice">Producto/Servicio</string>
    <string name="estimate_capitalized">PROFORMA</string>
    <string name="estimate">Proforma</string>
    <string name="page_no">Pag. No.</string>
    <string name="payment_made">Pago Realizado</string>
    <string name="invoice_email_subject">Factura %1$s de %2$s %3$s</string>
    <string name="invoice_email_text">Estimado %1$s,\n\n  Gracias por la Compra. \n\n  Porfavor verifique su factura adjunta %2$s.\n\n Saludos Cordiales \n\n %3$s %4$s</string>
    <string name="estimate_email_subject">Proforma %1$s de %2$s %3$s</string>
    <string name="estimate_email_text">Estimado %1$s,\n\n  Gracias por contactarnos \n\n  Porfavor verifique su proforma adjunta %2$s.\n\n Saludos Cordiales \n\n %3$s %4$s</string>

    <string name="pdf_not_created">No se pudo crear el PDF</string>
    <string name="unpaid">No Pagado</string>

    <string name="currency">Moneda</string>
    <string name="address">Dirección</string>
    <string name="logout">Salir</string>

    <string name="title_activity_setting">Ajustes</string>
    <string name="logo">Logo</string>
    <string name="title_activity_setting_logo">Ajustes de Logo</string>
    <string name="logo_info_text">Cargue un logo de tamaño 180px x 80px</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string> <!-- Replace with YOUR Admob banner id -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="home">Principal</string><!-- Replace with YOUR Admob interstitial id -->

</resources>
