<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_save"
          android:title="@string/save"
          android:orderInCategory="100"
          app:showAsAction="always"/>

    <item
        android:id="@+id/action_email"
        android:title="@string/email_invoice"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download"
        android:title="@string/download_pdf"
        android:visible="false"
        app:showAsAction="never" />

    <item android:id="@+id/action_delete"
          android:title="@string/delete"
          app:showAsAction="never"
          android:visible="false"/>
</menu>
