<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.bytecodr.invoicing.main.ItemPickerActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.rey.material.widget.Spinner
            android:id="@+id/spinner_items"
            style="@style/Material.Widget.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:minHeight="50dp"
            app:rd_style="@style/Material.Drawable.Ripple.Wave"
            app:spn_arrowSize="6dp"
            app:spn_label="@string/items"
            app:spn_labelEnable="true"
            app:spn_labelPadding="5dp"
            app:spn_labelTextColor="@color/colorSecondaryText"
            app:spn_labelTextSize="12sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/or"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:singleLine="true"
                android:tag="0"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
                android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edit_rate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rate"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edit_quantity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
