<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="50dp">>

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edit_estimate_number"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/estimate_number"
                        android:singleLine="true"
                        android:inputType="number"
                        android:text="0001"
                        android:tag="0"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edit_tax_rate"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tax_rate"
                        android:inputType="number"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edit_estimate_date"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/estimate_date"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edit_estimate_due_date"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/estimate_due_date"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <com.rey.material.widget.Spinner
                android:id="@+id/spinner_client"
                style="@style/Material.Widget.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:minHeight="50dp"
                app:rd_style="@style/Material.Drawable.Ripple.Wave"
                app:spn_arrowSize="6dp"
                app:spn_label="@string/client"
                app:spn_labelEnable="true"
                app:spn_labelPadding="5dp"
                app:spn_labelTextColor="@color/colorSecondaryText"
                app:spn_labelTextSize="12sp"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edit_client_notes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/client_notes"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/items"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/add_item_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_add_white"
                    app:backgroundTint="@color/colorAccent"
                    app:rippleColor="@color/colorAccent"/>
            </RelativeLayout>

            <ListView
                android:id="@+id/list_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/subtotal"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/text_subtotal_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="$0.00"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/tax"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/text_tax_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/colorPrimaryText"
                    android:text="$0.00"
                    android:textSize="18sp"/>
            </LinearLayout>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/balance_due"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_total_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="$0.00"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
	</ScrollView>

    <include
        layout="@layout/admob_bottom_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>